fixex on  entitys and  service, and created  ne  card  controller
